fix image covers and implimentation
match images sizes to gallery image sizes

--- a/css/site.styl
+++ b/css/site.styl
@@ -186,14 +186,18 @@ img
   max-height: 100%
   width: auto
 
-.image-cover
+.image-cover-holder
   overflow: hidden
   position: relative
   height: 100%
   width: 100%
-  img
-    position: absolute
-    max-width: initial
+  max-height: auto
+  max-width: auto
+
+.image-cover
+  max-height: none
+  max-width: none
+  position: absolute
 
 .only-desktop
   display: initial
